fix photos and tours layout on mobile

--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -304,9 +304,13 @@
 			}
 			ul {
 				li {
-					.location,
-					.continet {
-						display: inline-block;
+					.wrap {
+						span {
+							&.location,
+							&.continent {
+								display: inline-block;
+							}
+						}
 					}
 				}
 			}
