--- a/src/assets/sass/_screen.scss
+++ b/src/assets/sass/_screen.scss
@@ -450,7 +450,7 @@ nav {
 			justify-content: flex-start;
 		}
 		img {
-			min-width: 100%;
+			max-width: 100%;
 			height: auto;
 		}
 	}
